--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   ],
   "scripts": {
+    "postinstall": "make node",
     "test": "cd Tests && rm -f EMSthreadStub.js && for test in `ls *js`; do node $test 8; err=$?; echo $test \": ERROR=\" $err;  if [ $err -ne 0 ] ; then exit 1; fi; done",
     "example": "cd Examples; node concurrent_Q_and_TM.js 8"
   },
