pip works, but program is a mess

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 build/
 node_modules/
 .vagrant
-.local
+.local/
 Tests/EMSthreadStub.js
 dist/
 MANIFEST
 /.idea/
 /*.egg-info/
-/pip-tests/
+pip-tests/
 .conda*/
 .eggs/
+#CMakeLists.txt
+/cmake-*/
